Opened 8 years ago
Closed 8 years ago
#13613 closed bug (fixed)
SoftwareUpdater: error after update
Reported by: | Giova84 | Owned by: | perelandra |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/SoftwareUpdater | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Updating from hrev51278_gcc2h to 51291_gcc2h using SoftwareUpdater (from a Terminal window); after packages downloading and installing, I got:
ERROR - you must Lock a looper before calling Quit(), team=1857, looper=w>SoftwareUpdater
However the update process went fine.
Change History (7)
follow-up: 3 comment:1 by , 8 years ago
comment:2 by , 8 years ago
Looking for Quit()
in the sources reveal the following in http://cgit.haiku-os.org/haiku/tree/src/apps/softwareupdater/UpdateManager.cpp#n59 UpdateManager.cpp:
UpdateManager::~UpdateManager() { if (fStatusWindow != NULL) fStatusWindow->Quit(); if (fProblemWindow != NULL) fProblemWindow->Quit(); }
comment:3 by , 8 years ago
Replying to diver:
Do you have debug report for this crash?
When it shows this error message (from the Terminal), unfortunately SoftwareUpdater doesn't show any error/debug window (the one which asks to save a debug report); in facts seems that this error is only displayed if I run SoftwareUpdater from the Terminal.
comment:4 by , 8 years ago
Ah yes I may need to add a call to Lock() in there, I recently changed the way the app quits when i enabled the tab close box.
comment:6 by , 8 years ago
Status: | new → in-progress |
---|
Do you have debug report for this crash?