SoftwareUpdater- add zoom feature and bug fix

* Added zoom button to window tab (and backend code to accurately
  calculate proper zoom size for displayed packages)
* No longer need to add icon to notifications since this is now done
  automatically by the BNotification constructor since hrev51299
* Create icons and setup fonts in constructors of list item classes

Bug fixes:
* Lock windows before quitting (fixes #13613)