src/apps/softwareupdater/constants.h
@@ -53,6 +53,7 @@ static const uint32 kMsgRegister = 'iREG';
 static const uint32 kMsgFinalQuit = 'iFIN';
 static const uint32 kMsgMoreDetailsToggle = 'iDTO';
 static const uint32 kMsgWindowFrameChanged = 'iWFC';
+static const uint32 kMsgSetZoomLimits = 'iSZL';
 
 // Message data keys
 #define kKeyHeader "key_header"
